--- a/droidbox/build.gradle
+++ b/droidbox/build.gradle
@@ -39,17 +39,17 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.0.0-beta2'
+    implementation "com.android.support:appcompat-v7:$support_version"
     testImplementation 'junit:junit:4.12'
 
     /* DATA BINDING*/
-    kapt 'com.android.databinding:compiler:3.0.0-alpha4'
+    kapt 'com.android.databinding:compiler:3.0.0-alpha5'
 
     /*ANDROID LIFECYCLE*/
     compile "android.arch.lifecycle:runtime:1.0.0-alpha3"
     compile "android.arch.lifecycle:extensions:1.0.0-alpha3"
     annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha3"
-    implementation 'com.android.support:support-v4:26.0.0-beta2'
+    implementation "com.android.support:support-v4:$support_version"
 
     /*TIMBER*/
     compile 'com.jakewharton.timber:timber:4.5.1'
@@ -62,7 +62,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
 
     /*FIREBASE*/
     compile 'com.google.firebase:firebase-crash:11.0.2'
