--- a/droidbox/build.gradle
+++ b/droidbox/build.gradle
@@ -29,17 +29,13 @@ android {
     }
 }
 
-kapt {
-    generateStubs = true
-}
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support:appcompat-v7:26.0.0-beta2"
     testImplementation 'junit:junit:4.12'
 
     /* DATA BINDING*/
@@ -49,7 +45,7 @@ dependencies {
     compile "android.arch.lifecycle:runtime:1.0.0-alpha3"
     compile "android.arch.lifecycle:extensions:1.0.0-alpha3"
     annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha3"
-    implementation "com.android.support:support-v4:$support_version"
+    implementation "com.android.support:support-v4:26.0.0-beta2"
 
     /*TIMBER*/
     compile 'com.jakewharton.timber:timber:4.5.1'
