--- a/droidbox/build.gradle
+++ b/droidbox/build.gradle
@@ -44,13 +44,8 @@ dependencies {
     /*ANDROID LIFECYCLE*/
     compile "android.arch.lifecycle:runtime:1.0.0-alpha4"
     compile "android.arch.lifecycle:extensions:1.0.0-alpha4"
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha4"
+    kapt "android.arch.lifecycle:compiler:1.0.0-alpha4"
     implementation "com.android.support:support-v4:26.0.0-beta1"
-
-    /*ROOM*/
-    compile "android.arch.persistence.room:runtime:1.0.0-alpha4"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha4"
-    compile "android.arch.persistence.room:rxjava2:1.0.0-alpha4"
 
     /*TIMBER*/
     compile 'com.jakewharton.timber:timber:4.5.1'
