--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.android_plugin_version = '3.0.0-alpha8'
+    ext.support_version = '26.0.0-beta1'
+    ext.android_architecture_version = '1.0.0-alpha4'
+    ext.retrofit_version = "2.3.0"
     ext.kotlin_version = '1.1.3-2'
-    ext.android_plugin_version = '3.0.0-alpha7'
-    ext.android_support_version = '26.0.0-beta2'
     repositories {
         google()
         jcenter()
