--- a/droidbox/build.gradle
+++ b/droidbox/build.gradle
@@ -35,11 +35,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:26.0.0-beta1"
+    implementation "com.android.support:appcompat-v7:$support_version"
     testImplementation 'junit:junit:4.12'
 
     /* DATA BINDING*/
-    kapt 'com.android.databinding:compiler:3.0.0-alpha7'
+    kapt "com.android.databinding:compiler:$android_plugin_version"
 
     /*ANDROID LIFECYCLE*/
     compile "android.arch.lifecycle:runtime:1.0.0-alpha4"
@@ -47,23 +47,23 @@ dependencies {
     kapt "android.arch.lifecycle:compiler:1.0.0-alpha4"
 
     /*TIMBER*/
-    compile 'com.jakewharton.timber:timber:4.5.1'
+    compile "com.jakewharton.timber:timber:4.5.1"
 
     /* RX */
-    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile "io.reactivex.rxjava2:rxjava:2.1.0"
+    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
 
     /* RETROFIT */
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    compile "com.squareup.retrofit2:retrofit:2.3.0"
+    compile "com.squareup.retrofit2:converter-gson:2.3.0"
+    compile "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+    compile "com.squareup.okhttp3:logging-interceptor:3.8.1"
 
     /*FIREBASE*/
-    compile 'com.google.firebase:firebase-crash:11.0.2'
+    compile "com.google.firebase:firebase-crash:11.0.2"
 
     /*GLIDE*/
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile "com.github.bumptech.glide:glide:3.7.0"
 }
 
 
