--- a/droidbox/build.gradle
+++ b/droidbox/build.gradle
@@ -27,6 +27,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    dexOptions{
+        javaMaxHeapSize= "4g"
+    }
 }
 
 dependencies {
@@ -64,6 +67,9 @@ dependencies {
 
     /*GLIDE*/
     compile "com.github.bumptech.glide:glide:3.7.0"
+
+    /*RECYCLER_VIEW*/
+    compile "com.android.support:recyclerview-v7:$support_version"
 }
 
 
