--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     ext.support_version = '26.0.0'
     ext.android_architecture_version = '1.0.0-alpha4'
     ext.retrofit_version = "2.3.0"
-    ext.kotlin_version = '1.1.3-2'
+    ext.kotlin_version = '1.1.51'
     repositories {
         google()
         jcenter()
