--- a/droidbox/build.gradle
+++ b/droidbox/build.gradle
@@ -2,6 +2,9 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.JackParisi'
 
 android {
     compileSdkVersion 26
@@ -45,31 +48,31 @@ dependencies {
     kapt "com.android.databinding:compiler:$android_plugin_version"
 
     /*ANDROID LIFECYCLE*/
-    compile "android.arch.lifecycle:runtime:1.0.0-alpha9-1"
-    compile "android.arch.lifecycle:extensions:1.0.0-alpha9-1"
+    implementation "android.arch.lifecycle:runtime:1.0.0-alpha9-1"
+    implementation "android.arch.lifecycle:extensions:1.0.0-alpha9-1"
     kapt "android.arch.lifecycle:compiler:1.0.0-alpha9-1"
 
     /*TIMBER*/
-    compile "com.jakewharton.timber:timber:4.5.1"
+    implementation "com.jakewharton.timber:timber:4.5.1"
 
     /* RX */
-    compile "io.reactivex.rxjava2:rxjava:2.1.0"
-    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation "io.reactivex.rxjava2:rxjava:2.1.0"
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
 
     /* RETROFIT */
-    compile "com.squareup.retrofit2:retrofit:2.3.0"
-    compile "com.squareup.retrofit2:converter-gson:2.3.0"
-    compile "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
-    compile "com.squareup.okhttp3:logging-interceptor:3.8.1"
+    implementation "com.squareup.retrofit2:retrofit:2.3.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.3.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.8.1"
 
     /*FIREBASE*/
-    compile "com.google.firebase:firebase-crash:11.4.0"
+    implementation "com.google.firebase:firebase-crash:11.4.0"
 
     /*GLIDE*/
-    compile "com.github.bumptech.glide:glide:3.7.0"
+    implementation "com.github.bumptech.glide:glide:3.7.0"
 
     /*RECYCLER_VIEW*/
-    compile "com.android.support:recyclerview-v7:$support_version"
+    implementation "com.android.support:recyclerview-v7:$support_version"
 }
 
 
