--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,13 @@ buildscript {
     ext.kotlin_version = '1.1.51'
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$android_plugin_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
