--- a/droidbox/build.gradle
+++ b/droidbox/build.gradle
@@ -9,13 +9,13 @@ apply plugin: 'maven-publish'
 group='com.github.JackParisi'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion android_config.compileSdk
+    buildToolsVersion android_config.buildTools
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion android_config.minSdk
+        targetSdkVersion android_config.targetSdk
+        versionCode app_config.versionCode
+        versionName app_config.versionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -39,42 +39,43 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+
+    /* TEST */
+    androidTestImplementation(test.espresso, {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:$support_version"
-    testImplementation 'junit:junit:4.12'
+    testImplementation test.junit
 
-    /* DATA BINDING*/
-    kapt "com.android.databinding:compiler:$android_plugin_version"
+    /* KOTLIN */
+    implementation deps.kotlinStdlib
 
-    /*ANDROID LIFECYCLE*/
-    implementation "android.arch.lifecycle:runtime:1.0.0-alpha9-1"
-    implementation "android.arch.lifecycle:extensions:1.0.0-alpha9-1"
-    kapt "android.arch.lifecycle:compiler:1.0.0-alpha9-1"
+    /* SUPPORT */
+    implementation support.appCompact
+    implementation support.recyclerView
+
+    /* DATA BINDING */
+    kapt deps.dataBinding
+
+    /* ANDROID LIFECYCLE */
+    kapt deps.lifecycleCompiler
+    implementation deps.lifecycleExtension
 
     /*TIMBER*/
-    implementation "com.jakewharton.timber:timber:4.5.1"
+    implementation deps3RD.timber
 
     /* RX */
-    implementation "io.reactivex.rxjava2:rxjava:2.1.0"
-    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation deps3RD.rxJava
+    implementation deps3RD.rxAndroid
 
     /* RETROFIT */
-    implementation "com.squareup.retrofit2:retrofit:2.3.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.3.0"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:3.8.1"
+    implementation deps3RD.retrofit
 
     /*FIREBASE*/
-    implementation "com.google.firebase:firebase-crash:11.4.2"
+    implementation google.firebaseCrash
 
     /*GLIDE*/
-    implementation "com.github.bumptech.glide:glide:3.7.0"
-
-    /*RECYCLER_VIEW*/
-    implementation "com.android.support:recyclerview-v7:$support_version"
+    implementation deps3RD.glide
+    kapt deps3RD.glideCompiler
 }
 
 
