--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -2,16 +2,16 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion android_config.compileSdk
+    buildToolsVersion android_config.buildTools
 
 
     defaultConfig {
         applicationId "com.github.jackparisi.droidboxsample"
-        minSdkVersion 21
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion android_config.minSdk
+        targetSdkVersion android_config.targetSdk
+        versionCode app_config.versionCode
+        versionName app_config.versionName
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -28,10 +28,16 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    /* TEST */
+    testImplementation test.junit
+    androidTestImplementation test.runner
+    androidTestImplementation test.espresso
+
+    /* KOTLIN */
+    implementation deps.kotlinStdlib
+
+    /* SUPPORT */
+    implementation support.appCompact
+    implementation support.constraintLayout
 }
