--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,7 @@
 apply from: 'config.gradle'
 
 buildscript {
-    ext.android_plugin_version = '3.0.0-alpha9'
-    ext.support_version = '26.1.0'
-    ext.android_architecture_version = '1.0.0-alpha4'
-    ext.retrofit_version = "2.3.0"
+    ext.android_plugin_version = '3.0.0-rc1'
     ext.kotlin_version = '1.1.51'
     repositories {
         google()
@@ -13,7 +10,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-rc1'
+        classpath "com.android.tools.build:gradle:$android_plugin_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
 
