--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 apply from: 'config.gradle'
 
 buildscript {
-    ext.android_plugin_version = '3.0.0-rc1'
+    ext.android_plugin_version = '3.0.0'
     ext.kotlin_version = '1.1.51'
     repositories {
         google()
