Update gradle deps

--- a/config.gradle
+++ b/config.gradle
@@ -12,24 +12,32 @@ ext.android_config = [
 
 ext.versions = [
 
-        /* ANDROID */
-        supportLibs              : '26.1.0',
+        /* CORE */
+        androidPlugin            : '3.0.1',
+        kotlin                   : '1.2.0',
+        rxJava                   : '2.1.7',
+        rxAndroid                : '2.0.1',
+
+        /* ARCH */
+        architecture             : '1.0.0',
+
+        /* SUPPORT */
+        supportLibs              : '27.0.2',
         constraintLayout         : '1.0.2',
-        androidPlugin            : '3.0.0-alpha9',
-        kotlin                   : '1.1.51',
-        architecture             : '1.0.0-rc1',
-        dagger                   : '2.11-rc2',
 
         /* GOOGLE */
-        playServices             : '11.4.2',
+        playServices             : '11.6.2',
+        dagger                   : '2.11-rc2',
 
-        /* 3RD */
+        /* NETWORK */
         retrofit                 : '2.3.0',
         retorfitOkHttpInterceptor: '3.8.1',
-        glide                    : '4.2.0',
-        timber                   : '4.5.1',
-        rxJava                   : '2.1.0',
-        rxAndroid                : '2.0.1',
+
+        /* RES */
+        glide                    : '4.4.0',
+
+        /* LOG */
+        timber                   : '4.6.0',
 
         /* TEST */
         junit                    : '4.12',
@@ -37,20 +45,48 @@ ext.versions = [
         runner                   : '1.0.1'
 ]
 
-ext.deps = [
+ext.core = [
 
         /* DATA BINDING */
-        dataBinding           : "com.android.databinding:compiler:$versions.androidPlugin",
+        dataBinding  : "com.android.databinding:compiler:$versions.androidPlugin",
 
         /* KOTLIN */
-        kotlinStdlib          : "org.jetbrains.kotlin:kotlin-stdlib-jre7:$versions.kotlin",
+        kotlinStdlib : "org.jetbrains.kotlin:kotlin-stdlib-jre7:$versions.kotlin",
 
         /* ANDROID */
-        androidPlugin         : "com.android.tools.build:gradle:$versions.androidPlugin",
+        androidPlugin: "com.android.tools.build:gradle:$versions.androidPlugin",
+
+        /* RX */
+        rxJava       : "io.reactivex.rxjava2:rxjava:$versions.rxJava",
+        rxAndroid    : "io.reactivex.rxjava2:rxandroid:$versions.rxAndroid",
+]
+
+ext.arch = [
 
         /* ANDROID ARCHITECTURE */
-        lifecycleExtension    : "android.arch.lifecycle:extensions:$versions.architecture",
-        lifecycleCompiler     : "android.arch.lifecycle:compiler:$versions.architecture",
+        lifecycleExtension: "android.arch.lifecycle:extensions:$versions.architecture",
+        lifecycleCompiler : "android.arch.lifecycle:compiler:$versions.architecture",
+]
+
+ext.support = [
+
+        /* APP COMPACT */
+        appCompact      : "com.android.support:appcompat-v7:$versions.supportLibs",
+
+        /* SUPPORT V4 */
+        supportV4       : "com.android.support:support-v4:$versions.supportLibs",
+
+        /* RECYCLER VIEW */
+        recyclerView    : "com.android.support:recyclerview-v7:$versions.supportLibs",
+
+        /* CONSTRAINT LAYOUT */
+        constraintLayout: "com.android.support.constraint:constraint-layout:$versions.constraintLayout"
+]
+
+ext.google = [
+
+        /* FIREBASE CRASH */
+        firebaseCrash         : "com.google.firebase:firebase-crash:$versions.playServices",
 
         /* DAGGER 2 */
         dagger                : "com.google.dagger:dagger:$versions.dagger",
@@ -58,39 +94,37 @@ ext.deps = [
         daggerAndroidProcessor: "com.google.dagger:dagger-android-processor:$versions.dagger",
 ]
 
-ext.deps3RD = [
+ext.network = [
 
         /* RETROFIT */
         retrofit                 : "com.squareup.retrofit2:retrofit:$versions.retrofit",
         retorfitGsonConverter    : "com.squareup.retrofit2:converter-gson:$versions.retrofit",
         retrofitRxAdapter        : "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit",
         retorfitOkHttpInterceptor: "com.squareup.okhttp3:logging-interceptor:$versions.retorfitOkHttpInterceptor",
+]
+
+ext.res = [
 
         /* GLIDE */
-        glide                    : "com.github.bumptech.glide:glide:$versions.glide",
-        glideCompiler            : "com.github.bumptech.glide:compiler:$versions.glide",
+        glide        : "com.github.bumptech.glide:glide:$versions.glide",
+        glideCompiler: "com.github.bumptech.glide:compiler:$versions.glide",
+]
+
+ext.log = [
 
         /* TIMBER */
-        timber                   : "com.jakewharton.timber:timber:$versions.timber",
-
-        /* RX */
-        rxJava                   : "io.reactivex.rxjava2:rxjava:$versions.rxJava",
-        rxAndroid                : "io.reactivex.rxjava2:rxandroid:$versions.rxAndroid",
-]
-
-ext.support = [
-        appCompact      : "com.android.support:appcompat-v7:$versions.supportLibs",
-        recyclerView    : "com.android.support:recyclerview-v7:$versions.supportLibs",
-        constraintLayout: "com.android.support.constraint:constraint-layout:$versions.constraintLayout"
-]
-
-ext.google = [
-        firebaseCrash: "com.google.firebase:firebase-crash:$versions.playServices"
+        timber: "com.jakewharton.timber:timber:$versions.timber",
 ]
 
 ext.test = [
+
+        /* JUNIT */
         junit   : "junit:junit:$versions.junit",
+
+        /* RUNNER */
         runner  : "com.android.support.test:runner:$versions.runner",
+
+        /* ESPRESSO */
         espresso: "com.android.support.test.espresso:espresso-core:$versions.espresso"
 ]
 
