--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,16 @@
 apply from: 'config.gradle'
 
 buildscript {
-    ext.android_plugin_version = '3.0.1'
-    ext.kotlin_version = '1.2.0'
     repositories {
         google()
         mavenCentral()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$android_plugin_version"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:3.0.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.10"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
