--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -50,8 +50,10 @@ dependencies {
     implementation arch.lifecycleExtension
 
     /* GOOGLE */
-    implementation google.dagger
-    kapt google.daggerAndroidProcessor
+    implementation google.daggerRuntime
+    implementation google.daggerAndroid
+    implementation google.daggerAndroidSupport
+    kapt google.daggerAndroidSupportCompiler
     kapt google.daggerCompiler
 
     /* NETWORKING */
