--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 apply from: 'config.gradle'
 
 buildscript {
+    ext.kotlin_version = '1.2.10'
     repositories {
         google()
         mavenCentral()
@@ -9,9 +10,9 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:3.0.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.10"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
