--- a/droidbox/build.gradle
+++ b/droidbox/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     /* SUPPORT */
     implementation support.appCompact
     implementation support.recyclerView
+    implementation support.design
 
     /* GOOGLE */
     implementation google.firebaseCrash
