--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -3,15 +3,15 @@
     package="com.github.giacomoparisi.droidboxsample">
 
     <application
+        android:name="com.github.giacomoparisi.droidboxsample.core.DroidBoxSampleApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name="com.github.giacomoparisi.droidboxsample.core.DroidBoxSampleApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.github.giacomoparisi.droidboxsample.activity.game.GamesActivity"
+            android:name="com.github.giacomoparisi.droidboxsample.ui.home.HomeActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,10 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.github.giacomoparisi.droidboxsample.activity.overwatch.OverwatchActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".activity.steam.game.SteamGamesActivity"
+            android:name=".ui.validator.ValidatorActivity"
             android:screenOrientation="portrait" />
     </application>
 
