--- a/droidbox/src/main/AndroidManifest.xml
+++ b/droidbox/src/main/AndroidManifest.xml
@@ -3,6 +3,5 @@
 
     <application
         android:allowBackup="true"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme" />
+        android:supportsRtl="true" />
 </manifest>
