--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -5,7 +5,6 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion android_config.compileSdk
-    buildToolsVersion android_config.buildTools
 
 
     defaultConfig {
@@ -15,7 +14,7 @@ android {
         versionCode app_config.versionCode
         versionName app_config.versionName
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
 
@@ -40,11 +39,11 @@ dependencies {
     implementation core.kotlinStdlib
 
     /* SUPPORT */
-    implementation support.appCompact
-    implementation support.constraintLayout
-    implementation support.recyclerView
-    implementation support.supportV4
-    implementation support.design
+    implementation androidX.appCompact
+    implementation androidX.constraintLayout
+    implementation androidX.recyclerView
+    implementation androidX.supportV4
+    implementation androidX.design
 
     /* ARCH */
     kapt arch.lifecycleCompiler
